@@ -2,10 +2,11 @@ package org.example.service;
 
 import org.example.dto.TaskDto;
 import org.example.entity.Task;
+import org.example.mapping.TaskMapper;
 import org.example.repository.TaskRepository;
+import org.example.service.kafka.producer.TaskStatusProducer;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -13,47 +14,40 @@ import java.util.stream.Collectors;
 @Transactional
 public class TaskService {
     private final TaskRepository taskRepository;
+    private final TaskStatusProducer taskStatusProducer;
+    private final TaskMapper taskMapper;
 
-    public TaskService(TaskRepository taskRepository) {
+    public TaskService(TaskRepository taskRepository, TaskStatusProducer taskStatusProducer, TaskMapper taskMapper) {
         this.taskRepository = taskRepository;
+        this.taskStatusProducer = taskStatusProducer;
+        this.taskMapper = taskMapper;
     }
 
     public TaskDto createTask(TaskDto taskDto) {
-        Task task = new Task();
-        task.setTitle(taskDto.title());
-        task.setDescription(taskDto.description());
-        task.setUserId(taskDto.userid());
-        task.setStatus(taskDto.status());
-
+        Task task = taskMapper.fromDto(taskDto);
         Task savedTask = taskRepository.save(task);
-        return convertToDto(savedTask);
+        return taskMapper.toDto(savedTask);
     }
 
+    @Transactional(readOnly = true)
     public TaskDto getTask(Long id) {
         Task task = taskRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Task not found with id: " + id));
-        return convertToDto(task);
+        return taskMapper.toDto(task);
     }
 
     public TaskDto updateTask(Long id, TaskDto taskDto) {
-        Task task = taskRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Task not found with id: " + id));
+        Task existingTask = taskRepository.findById(id)
+                .orElseThrow(RuntimeException::new);
 
-        if (taskDto.title() != null) {
-            task.setTitle(taskDto.title());
-        }
-        if (taskDto.description() != null) {
-            task.setDescription(taskDto.description());
-        }
-        if (taskDto.userid() != null) {
-            task.setUserId(taskDto.userid());
-        }
-        if (taskDto.status() != null) {
-            task.setStatus(taskDto.status());
+        taskMapper.updateFromDto(taskDto, existingTask);
+
+        if (taskDto.status() != null && !taskDto.status().equals(existingTask.getStatus())) {
+            taskStatusProducer.sendStatusUpdate(id, taskDto.status().toString());
         }
 
-        Task updatedTask = taskRepository.save(task);
-        return convertToDto(updatedTask);
+        Task updatedTask = taskRepository.save(existingTask);
+        return taskMapper.toDto(updatedTask);
     }
 
     public void deleteTask(Long id) {
@@ -65,17 +59,7 @@ public class TaskService {
 
     public List<TaskDto> getAllTasks() {
         return taskRepository.findAll().stream()
-                .map(this::convertToDto)
-                .toList();
-    }
-
-    private TaskDto convertToDto(Task task) {
-        return new TaskDto(
-                task.getId(),
-                task.getTitle(),
-                task.getDescription(),
-                task.getUserId(),
-                task.getStatus()
-        );
+                .map(taskMapper::toDto)
+                .collect(Collectors.toList());
     }
 }
